k8s/ingress/ssok-app/base/dev/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ssok-app-ingress
  namespace: ssok
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/ssl-redirect: "true"

spec:
  rules:
    - host: api.kudong.kr
      http:
        paths:
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: ssok-gateway-service
                port:
                  number: 80
